--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     "rules": {
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
@@ -30,6 +30,14 @@
             "single"
         ],
         "semi": [
+            "error",
+            "always"
+        ],
+        "jsx-quotes":[
+            2,
+            "prefer-double"
+        ],
+        "eol-last":[
             "error",
             "always"
         ]
